--- a/app/views/beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020.html
+++ b/app/views/beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020.html
@@ -45,10 +45,11 @@
 
       <h2 class="govuk-heading-l">2020</h2>
 
-      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales - EEA Route</h3>
+      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales</h3>
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Routes</th>
             <th scope="col" class="govuk-table__header">Yes</th>
             <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
             <th scope="col" class="govuk-table__header">No</th>
@@ -58,28 +59,15 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
+            <td class="govuk-table__cell">EEA Route</td>
             <td class="govuk-table__cell">6</td>
             <td class="govuk-table__cell">2</td>
             <td class="govuk-table__cell">1</td>
             <td class="govuk-table__cell">0</td>
             <td class="govuk-table__cell"><strong>9</strong></td>
           </tr>
-        </tbody>
-      </table>
-
-      <h3 class="govuk-heading-m">Institute of Chartered Accountants in England and Wales - International Route</h3>
-      <table class="govuk-table rpr-decision-data__table-container">
-        <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Yes</th>
-            <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
-            <th scope="col" class="govuk-table__header">No</th>
-            <th scope="col" class="govuk-table__header">No (after compensatory measure)</th>
-            <th scope="col" class="govuk-table__header"><strong>Total</strong></th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">International Route</td>
             <td class="govuk-table__cell">4</td>
             <td class="govuk-table__cell">2</td>
             <td class="govuk-table__cell">1</td>
@@ -89,10 +77,11 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m" id="regulator-2">Institute of Chartered Accountants in Scotland - EEA Route</h3>
+      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in Scotland</h3>
       <table class="govuk-table rpr-decision-data__table-container">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Routes</th>
             <th scope="col" class="govuk-table__header">Yes</th>
             <th scope="col" class="govuk-table__header">Yes (after compensatory measure)</th>
             <th scope="col" class="govuk-table__header">No</th>
@@ -102,6 +91,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
+            <td class="govuk-table__cell">EEA Route</td>
             <td class="govuk-table__cell">2</td>
             <td class="govuk-table__cell">2</td>
             <td class="govuk-table__cell">1</td>
