--- a/app/views/beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020.html
+++ b/app/views/beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020.html
@@ -255,7 +255,7 @@
         </nav>
 
         <div class="rpr-internal__details-page-file-download">
-          <span class="govuk-body-s"><a href="/beta-sprint-10/public-facing/recognition-decision-data-chartered-accountant-2020" class="govuk-link rpr-internal__details-page-file-download-link">Download data set for Chartered Accountants 2020 (Csv)</a></span>
+          <span class="govuk-body-s"><a href="#" class="govuk-link rpr-internal__details-page-file-download-link">Download data set for Chartered Accountants 2020 (Csv)</a></span>
         </div>
         
       </aside>
