--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,8 @@
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="beta-sprint-11/regulator-england-and-wales/recognition-decision-data-chartered-accountant-2020">Revised data set page (single)</a></li>
         <li><a href="beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020">Public facing data set</a></li>
+        <li><a href="beta-sprint-11/national-admin/recognition-data-1">Decision data listing page (central admin)</a></li>
+        <li><a href="beta-sprint-11/regulator-england-and-wales/recognition-data-1">Decision data listing page (regulator)</a></li>
       </ul>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
