adding more alternative public view

--- a/app/views/beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020-v2.html
+++ b/app/views/beta-sprint-11/public-facing/recognition-decision-data-chartered-accountant-2020-v2.html
@@ -30,8 +30,9 @@
 
       <h2 class="govuk-heading-l">2020</h2>
 
-      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales</h3>
+      <h3 class="govuk-heading-m" id="regulator-1">Option 1: original design</h3>
       <table class="govuk-table rpr-decision-data__table-container">
+        <caption class="govuk-table__caption govuk-table__caption--m">Institute of Chartered Accountants in England and Wales</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header col1"></th>
@@ -68,8 +69,11 @@
         </tbody>
       </table>
 
-      <h3 class="govuk-heading-m" id="regulator-1">Institute of Chartered Accountants in England and Wales (alternative layout)</h3>
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+      <h3 class="govuk-heading-m">Option 2: flipped table (integrated routes)</h3>
       <table class="govuk-table rpr-decision-data__table-container">
+        <caption class="govuk-table__caption govuk-table__caption--m">Institute of Chartered Accountants in England and Wales</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header vertical-col1"></th>
@@ -104,6 +108,60 @@
         </tbody>
       </table>
 
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+      <h3 class="govuk-heading-m">Option 3: flipped table (separated routes)</h3>
+      <table class="govuk-table rpr-decision-data__table-container">
+        <caption class="govuk-table__caption govuk-table__caption--m">EEA route</caption>
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Accepted - qualifications recognised</th>
+            <td class="govuk-table__cell col2">6</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Accepted - additional conditions met</th>
+            <td class="govuk-table__cell col2">2</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Not accepted - additional conditions not met</th>
+            <td class="govuk-table__cell col2">1</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Not Accepted – qualifications not recognised</th>
+            <td class="govuk-table__cell col2">0</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Total</th>
+            <td class="govuk-table__cell col2"><strong>9</strong></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table class="govuk-table rpr-decision-data__table-container">
+        <caption class="govuk-table__caption govuk-table__caption--m">International route</caption>
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Accepted - qualifications recognised</th>
+            <td class="govuk-table__cell col2">4</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Accepted - additional conditions met</th>
+            <td class="govuk-table__cell col2">2</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Not accepted - additional conditions not met</th>
+            <td class="govuk-table__cell col2">1</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Not Accepted – qualifications not recognised</th>
+            <td class="govuk-table__cell col2">4</td>
+          </tr>
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Total</th>
+            <td class="govuk-table__cell col2"><strong>11</strong></td>
+          </tr>
+        </tbody>
+      </table>
 
     </div>
 
